--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "shortid": "^2.2.16",
+    "styled-components": "^6.1.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
